--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -5,7 +5,7 @@ http.port=
 page.size=
 
 # SoldToParty Configuration: The sold-to party is contractually responsible for sales orders.
-s4hana.SoldToParty=
+s4hana.soldToParty=
 
 # Watermarking default last query timestamp e.g. 2017-12-13T03:00:59Z
 watermark.default.expression=
