Added scm to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,4 @@
             <layout>default</layout>
         </repository>
     </repositories>
-</project>
+<scm><connection>scm:git:git@github.com:mulesoft/template-sfdc2s4hana-order-migration.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sfdc2s4hana-order-migration.git</developerConnection><url>https://github.com/mulesoft/template-sfdc2s4hana-order-migration</url><tag>HEAD</tag></scm></project>
