--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>template-sfdc2s4hana-order-migration</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <packaging>mule-application</packaging>
     <name>template-sfdc2s4hana-order-migration</name>
 
@@ -107,4 +107,4 @@
             <layout>default</layout>
         </repository>
     </repositories>
-<scm><connection>scm:git:git@github.com:mulesoft/template-sfdc2s4hana-order-migration.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sfdc2s4hana-order-migration.git</developerConnection><url>https://github.com/mulesoft/template-sfdc2s4hana-order-migration</url><tag>HEAD</tag></scm></project>
+<scm><connection>scm:git:git@github.com:mulesoft/template-sfdc2s4hana-order-migration.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sfdc2s4hana-order-migration.git</developerConnection><url>https://github.com/mulesoft/template-sfdc2s4hana-order-migration</url><tag>v2.1.0</tag></scm></project>
